--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.6.1",
@@ -16,6 +17,7 @@
     "express-session": "^1.18.1",
     "mercadopago": "^2.8.0",
     "nodemailer": "^7.0.3",
+    "pg": "^8.16.3",
     "puppeteer": "^24.13.0",
     "stripe": "^18.2.1",
     "uuid": "^11.1.0",
