--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.16.3",
     "puppeteer": "^24.13.0",
     "stripe": "^18.2.1",
+    "twemoji": "^14.0.2",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
